# rag-assistant-langchain

./: .gitattributes  .gitignore  LICENSE  README.md  criar_db.py  ingest.py  main.py  pyproject.toml  test.py
db.sqlite3/: chroma.sqlite3
